Fixed spacing and alignment of language regions.

--- a/app/client/src/pages/languages/view/view-language.scss
+++ b/app/client/src/pages/languages/view/view-language.scss
@@ -102,10 +102,12 @@
   .label {
     font-weight: bold;
     color: mat-color($app-secondary);
+    margin-right: 10px;
   }
 
   .value {
     color: #767777;
+    text-align: right;
   }
 }
 
